tried to load from aws s3
This failed because SPM is installing the aws package to the wrong location on build. not sure how ot fix this, but people are saying that it works with cocoapods. I do not wanna use cocoapods, though

--- a/GymVision/GymVision.xcodeproj/xcshareddata/xcschemes/GymVision.xcscheme
+++ b/GymVision/GymVision.xcodeproj/xcshareddata/xcschemes/GymVision.xcscheme
@@ -73,6 +73,13 @@
             ReferencedContainer = "container:GymVision.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "S3_BUCKET"
+            value = "3605e390-a72e-480b-8435-19d7a740a2a9"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
