--- a/GymVision/GymVision/Info.plist
+++ b/GymVision/GymVision/Info.plist
@@ -15,6 +15,8 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>IDENTITY_POOL_ID</key>
+	<string>$(IDENTITY_POOL_ID)</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
